--- a/package.json
+++ b/package.json
@@ -3,29 +3,33 @@
   "version": "0.1.0",
   "description": "Candidate assessment system [PWA]",
   "private": true,
-  "scripts": {
-    "prereq": "npm install --save-dev webpack",
-    "build:prod": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "start:dev": "webpack serve --open --mode=development"
-  },
   "license": "MIT",
   "author": "Yinon Avraham",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "deploy": "firebase deploy"
+  },
   "dependencies": {
-    "css-loader": "^6.3.0",
-    "style-loader": "^3.3.0",
-    "workbox-precaching": "^6.3.0",
-    "workbox-recipes": "^6.3.0"
+    "core-js": "^3.6.5",
+    "firebase": "^9.1.3",
+    "firebaseui": "^5.0.0",
+    "md5": "^2.3.0",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.3.2",
-    "inject-body-webpack-plugin": "^1.3.0",
-    "json5": "^2.2.0",
-    "webpack": "^5.58.1",
-    "webpack-cli": "^4.9.0",
-    "webpack-dev-server": "^4.3.1",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^6.3.0",
-    "yamljs": "^0.3.0"
+    "@vue/cli": "^4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.0.3",
+    "vue-template-compiler": "^2.6.11"
   }
 }
