--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "gibushon-pwa",
   "version": "0.1.0",
-  "description": "Candidate assessment system [PWA]",
   "private": true,
-  "license": "MIT",
+  "description": "Candidate assessment system [PWA]",
   "author": "Yinon Avraham",
   "scripts": {
-    "prereq": "npm install --save-dev @vue/cli",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "prereq": "npm install --save-dev @vue/cli"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "core-js": "^3.6.5",
     "firebase": "^9.1.3",
     "firebaseui": "^5.0.0",
     "md5": "^2.3.0",
     "register-service-worker": "^1.7.1",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -31,6 +33,11 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
+  },
+  "license": "MIT"
 }
